syntax = "proto3";

package pb;

service Koala {
  rpc LeaderLookup (LeaderLookupRequest) returns (LeaderLookupResponse);
}

message LeaderLookupRequest {}

message LeaderLookupResponse {
  uint32 leader_id = 1;
}
